# omnichunk

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml  setup.cfg  v0.10.1.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs-pages.yml  release.yml  rust-wheel-smoke.yml
benchmarks/: PROFILING_REPORT.md  README.md  README_gutenberg.md  comparison_format.py  run_benchmarks.py  run_comparisons.py  run_gutenberg.py  run_hotspot_profile.py  run_html_report.py  run_large_corpus.py  run_profiler_deep.py  run_quality_report.py  run_v09_stress.py  workloads.py
docs/: api-stability.md  index.md  install.md
docs/contributing/: mutation-testing.md
docs/migrations/: index.md  v0.10.md  v0.8.md  v0.9.md
docs/performance/: sla.md
docs/reference/: chunker.md
examples/: 01_quickstart.py  02_code_chunking.py  03_prose_and_markdown.py  04_markup_chunking.py  05_async_and_streaming.py  06_hierarchical_chunking.py  07_incremental_diff.py  08_token_budget_optimizer.py  09_semantic_chunking.py  10_graphrag.py  11_vector_db_export.py  12_plugin_api.py  README.md
examples/notebooks/: 06_hierarchical_chunking.ipynb
rust/omnichunk_rust/: Cargo.toml
rust/omnichunk_rust/src/: lib.rs
scripts/: build_rust_extension.py  check_ai_rules_sync.py  check_benchmarks.py  run_mutmut.sh
src/omnichunk/: __init__.py  chunker.py  cli.py  dedup.py  eval.py  plugins.py  quality.py  serialization.py  types.py
src/omnichunk/budget/: __init__.py  optimizer.py
src/omnichunk/context/: __init__.py  entities.py  format.py  imports.py  scope.py  siblings.py
src/omnichunk/diff/: __init__.py  engine.py
src/omnichunk/engine/: __init__.py  code_engine.py  hybrid_engine.py  markup_engine.py  prose_engine.py  router.py  semantic_engine.py
src/omnichunk/formats/: __init__.py  chunk.py  docx_loader.py  ipynb.py  pdf.py  tex.py  types.py
src/omnichunk/graph/: __init__.py  builder.py  types.py
src/omnichunk/hierarchy/: __init__.py  builder.py
src/omnichunk/mcp/: __init__.py  server.py
src/omnichunk/otel/: __init__.py  util.py
src/omnichunk/parser/: __init__.py  html_parser.py  languages.py  markdown_parser.py  query_patterns.py  tree_sitter.py
src/omnichunk/propositions/: __init__.py  heuristic.py  llm_extract.py  types.py
src/omnichunk/semantic/: __init__.py  boundaries.py  sentences.py  splitter.py  tfidf.py
src/omnichunk/sizing/: __init__.py  counter.py  nws.py  rust_accel.py  tokenizers.py
src/omnichunk/store/: __init__.py  chunk_store.py
src/omnichunk/util/: __init__.py  detect.py  text_index.py
src/omnichunk/windowing/: __init__.py  greedy.py  merge.py  models.py  overlap.py  split.py
tests/: conftest.py  test_api.py  test_async.py  test_benchmarks.py  test_budget.py  test_chunk_store.py  test_cli.py  test_code_chunking.py  test_context.py  test_diff.py  test_edge_cases.py  test_entity_extraction.py  test_extended_languages.py  test_graph.py  test_hierarchy.py  test_html_report.py  test_hybrid_chunking.py  test_invariants_hypothesis.py  test_markup_chunking.py  test_mcp_server.py  test_name_capture_index.py  test_otel.py  test_overlap.py  test_plugins.py  test_propositions.py  test_prose_chunking.py  test_quality.py  test_query_patterns.py  test_semantic.py  test_semantic_rust.py  test_sizing.py  test_statement_split.py  test_stream_upsert.py  test_text_index.py  test_text_index_slice.py  test_topic_shift.py  test_v09_multiformat_dedup_eval.py  test_vectordb_export.py
tests/fixtures/: c_complex.c  cpp_complex.cpp  csharp_complex.cs  html_page.html  kotlin_complex.kt  markdown_doc.md  mega_python_50x.py  mixed_notebook.py  php_complex.php  python_complex.py  ruby_complex.rb  rust_complex.rs  sample.json  sample.toml  sample.yaml  sample_v09.ipynb  sample_v09.tex  typescript_complex.ts
