[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "omnichunk"
version = "0.9.0"
description = "Structure-aware deterministic chunking for code, prose, and markup."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
  "chunking",
  "rag",
  "semantic-search",
  "code-analysis",
  "tree-sitter",
  "embedding",
  "llm",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.24.0",
  "tree-sitter>=0.23.0",
  "tree-sitter-python>=0.23.0",
  "tree-sitter-javascript>=0.23.0",
  "tree-sitter-typescript>=0.23.0",
  "tree-sitter-rust>=0.23.0",
  "tree-sitter-go>=0.23.0",
  "tree-sitter-java>=0.23.0",
]

[project.scripts]
omnichunk = "omnichunk.cli:main"

[project.optional-dependencies]
all-languages = [
  "tree-sitter-c>=0.23.0",
  "tree-sitter-cpp>=0.23.0",
  "tree-sitter-c-sharp>=0.23.0",
  "tree-sitter-ruby>=0.23.0",
  "tree-sitter-php>=0.23.0",
  "tree-sitter-kotlin>=0.23.0",
  # PyPI ships only 0.0.x (aligned with tree-sitter~=0.23); no 0.23.x wheel yet.
  "tree-sitter-swift>=0.0.1",
]
pinecone = []
weaviate = []
supabase = []
vectordb = []
semantic = []
graph = []
tiktoken = ["tiktoken>=0.5.0"]
transformers = ["transformers>=4.30.0"]
langchain = ["langchain-core>=0.2.0"]
llamaindex = ["llama-index-core>=0.10.0"]
profiling = [
  "py-spy>=0.3.14",
  "line-profiler>=4.1.0",
]
rust = ["maturin>=1.7.0"]
pdf = ["pypdf>=3.0"]
docx = ["python-docx>=1.0"]
formats = ["pypdf>=3.0", "python-docx>=1.0"]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
  "tiktoken>=0.5.0",
  "semchunk>=2.0.0",
  "nltk>=3.8.1",
  "mypy>=1.0.0",
  "ruff>=0.4.0",
  "pre-commit>=3.7.0",
  "maturin>=1.7.0",
  "tree-sitter-c>=0.23.0",
  "tree-sitter-cpp>=0.23.0",
  "tree-sitter-c-sharp>=0.23.0",
  "tree-sitter-ruby>=0.23.0",
  "tree-sitter-php>=0.23.0",
  "tree-sitter-kotlin>=0.23.0",
  "tree-sitter-swift>=0.0.1",
  "pypdf>=3.0",
  "python-docx>=1.0",
]

[project.urls]
Homepage = "https://github.com/oguzhankir/omnichunk"
Documentation = "https://github.com/oguzhankir/omnichunk#readme"
Issues = "https://github.com/oguzhankir/omnichunk/issues"
Source = "https://github.com/oguzhankir/omnichunk"
Changelog = "https://github.com/oguzhankir/omnichunk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/omnichunk"]

[tool.hatch.build.targets.sdist]
include = [
  "src/omnichunk",
  "tests",
  "benchmarks",
  "scripts",
  "examples",
  "rust",
  "README.md",
  "pyproject.toml",
  "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    # Intentionally repetitive stress fixture; not valid as a single linted module.
    "tests/fixtures/mega_python_50x.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B905"]
